[package]
name = "logfort"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.14.0"
axum = "0.8.7"
bcrypt = "0.17.1"
chrono = "0.4.42"
colored = "3.0.0"
dotenvy = "0.15.7"
sqlx = { version = "0.8.6", features = ["mysql", "runtime-tokio", "chrono"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.8", features = ["fs", "full"] }

